solved the issue of not showing some panels

--- a/Front-End/src/styles/About.css
+++ b/Front-End/src/styles/About.css
@@ -8,7 +8,7 @@
 }
 .ABOUTME{
     min-height: 100vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("../images/AboutUsBackgroud.avif") ;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("../assets/AboutUsBackgroud.avif") ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
